core/test/org.eclipse.vjet.test.core.jstojava/testFiles/org/eclipse/vjet/dsf/jst/validation/vjo/BugFixes/bad/bad/Bug46684.js
vjo.ctype('org.eclipse.vjet.dsf.jst.validation.vjo.BugFixes.bad.bad.Bug46684') //< public
.endType();